--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.3'
+
 services:
 
   frontend:
@@ -6,6 +7,31 @@ services:
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
+  backend:
+    container_name: foodgram-backend
+    build: ../backend  # Путь к Dockerfile бэкенда
+    ports:
+      - "8000:8000"
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/     # Том для медиа
+    depends_on:
+      - db
+
+  db:
+    image: postgres:14-alpine
+    environment:
+      POSTGRES_DB: foodgram
+      POSTGRES_USER: foodgram_user
+      POSTGRES_PASSWORD: foodgram_pass
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
+
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
@@ -15,3 +41,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static
+      - media_value:/var/html/media          # Подключаем медиа в nginx
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  static_value:
+  media_value:
+  postgres_data:
