add workfows and fix bug

--- a/infra/nginx_production.conf
+++ b/infra/nginx_production.conf
@@ -1,8 +1,32 @@
+# Перенаправление HTTP на HTTPS
 server {
     listen 80;
+    server_name foodgrami.zapto.org;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS-сервер
+server {
+    listen 443 ssl;
+    server_name foodgrami.zapto.org;
+
+    ssl_certificate /etc/letsencrypt/live/foodgrami.zapto.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/foodgrami.zapto.org/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     client_max_body_size 10M;
-    server_name foodgrama.sytes.net 89.169.175.76;
     server_tokens off;
+
+    # Ваши существующие настройки и location-блоки
 
     location /static/admin {
         autoindex on;
@@ -16,6 +40,7 @@ server {
     location /media/ {
         root /var/html/;
     }
+
 
     location /api/ {
     proxy_pass http://backend:8000;
