--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,5 @@ COPY . .
 
 
 # Команда для запуска сервера
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "foodgram.wsgi:application"]
+
