--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -2,7 +2,6 @@ version: '3.3'
 
 services:
 
-
   db:
     image: postgres:14-alpine
     environment:
@@ -11,15 +10,12 @@ services:
       POSTGRES_PASSWORD: foodgram_pass
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    ports:
-      - "5432:5432"  
-
 
   backend:
     container_name: foodgram-backend
-    build: ../backend
+    image: nikita4/foodgram_backend
     command: bash -c "sleep 10 && python manage.py runserver 0.0.0.0:8000"
-    env_file: ../.env
+    env_file: .env
     ports:
       - "8000:8000"
     volumes:
@@ -28,10 +24,9 @@ services:
     depends_on:
       - db
 
-
   frontend:
     container_name: foodgram-front
-    build: ../frontend
+    image: nikita4/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -42,12 +37,15 @@ services:
     image: nginx:1.25.4-alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static
       - media_value:/var/html/media
+      - /var/www/certbot:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt  # Добавлено
     depends_on:
       - backend
       - frontend
