--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,140 +1,114 @@
-name: Main Foodgram workflow
+name: Foodgram Workflow
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
+
   tests:
+    name: PEP8 check
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13.10
-        env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_password
-          POSTGRES_DB: django_db
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+          cd backend
+          pip install -r requirements.txt
+      - name: Test with flake8
+        run: |
+          cd backend
+          python -m flake8 .
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
-    - name: Test with flake8 and django tests
-      env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
-      run: |
-        python -m flake8 backend/
-        cd backend/
-        python manage.py test
-
-  build_and_push_to_docker_hub:
-    name: Push Docker image to DockerHub
+  build_and_push_backend_to_docker_hub:
+    name: Pushing backend image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [ tests ]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+      - name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
-          context: ./backend/
+          context: ./backend
           push: true
-          tags: nikita4/foodgram_backend:latest 
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-backend:latest
 
-  frontend_tests:
+  build_and_push_frontend_to_docker_hub:
+    name: Pushing frontend image to Docker Hub
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Install dependencies
-      run: |
-        cd frontend/
-        npm ci
-    - name: Test frontend
-      run: |
-        cd frontend/
-        npm run test
-
-  build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
-    runs-on: ubuntu-latest
-    needs: frontend_tests
+    needs: [ tests ]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+      - name: Build and push frontend image
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend/
+          context: ./frontend
           push: true
-          tags: nikita4/foodgram_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
 
   deploy:
+    name: Deploying on remote server
     runs-on: ubuntu-latest
-    needs: 
-      - build_and_push_to_docker_hub
-      - build_frontend_and_push_to_docker_hub
+    needs:
+      - build_and_push_backend_to_docker_hub
+      - build_and_push_frontend_to_docker_hub
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-    - name: Copy docker-compose.yml via ssh
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "docker-compose.production.yml"
-        target: "/home/${{ secrets.USER }}/foodgram/"
-    - name: Executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        script: |
-          cd /home/${{ secrets.USER }}/foodgram
-          sudo docker-compose -f docker-compose.production.yml pull
-          sudo docker-compose -f docker-compose.production.yml down
-          sudo docker-compose -f docker-compose.production.yml up -d
-          sudo docker-compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
-    - name: Send message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: "Деплой успешно выполнен!"
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            cd /home/${{ secrets.USER }}/foodgram
+            sudo rm -f .env
+            sudo touch .env
+            sudo chmod 600 .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} | sudo tee -a .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} | sudo tee -a .env
+            echo DB_NAME=${{ secrets.DB_NAME }} | sudo tee -a .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} | sudo tee -a .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} | sudo tee -a .env
+            echo DB_HOST=${{ secrets.DB_HOST }} | sudo tee -a .env
+            echo DB_PORT=${{ secrets.DB_PORT }} | sudo tee -a .env
+
+            sudo docker-compose down
+            sudo docker-compose pull
+            sudo docker-compose up -d --build
+
+  send_message:
+    name: Sending Telegram message
+    runs-on: ubuntu-latest
+    needs: [ deploy ]
+    steps:
+      - name: Send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: "Все круто деплой прошел!"
