--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ on:
 jobs:
 
   tests:
-    name: PEP8 check
+    name: check pep8 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -29,7 +29,7 @@ jobs:
           python -m flake8 .
 
   build_and_push_backend_to_docker_hub:
-    name: Pushing backend image to Docker Hub
+    name: Push backend Docker Hub
     runs-on: ubuntu-latest
     needs: [ tests ]
     steps:
@@ -50,7 +50,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-backend:latest
 
   build_and_push_frontend_to_docker_hub:
-    name: Pushing frontend image to Docker Hub
+    name: Push frontend Docker Hub
     runs-on: ubuntu-latest
     needs: [ tests ]
     steps:
