--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,9 @@ pillow==11.0.0
 sqlparse==0.5.1
 urllib3==2.2.3
 python-dotenv>=0.19.0
+flake8==5.0.4
+flake8-broken-line==0.6.0
+flake8-isort==5.0.0
+flake8-plugin-utils==1.3.2
+flake8-return==1.1.3
 gunicorn
