--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,24 +9,30 @@ on:
 jobs:
 
   tests:
-    name: check pep8 
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          cd backend
-          pip install -r requirements.txt
-      - name: Test with flake8
-        run: |
-          cd backend
-          python -m flake8 .
+  name: check pep8
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort isort
+        pip install -r backend/requirements.txt
+    
+    - name: Run isort
+      run: |
+        isort .
+    
+    - name: Test with flake8
+      run: |
+        flake8 .
+
 
   build_and_push_backend_to_docker_hub:
     name: Push backend Docker Hub
