--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,26 +12,31 @@ jobs:
   name: check pep8
   runs-on: ubuntu-latest
   steps:
+    # Шаг 1: Клонируем репозиторий
     - uses: actions/checkout@v4
     
+    # Шаг 2: Устанавливаем Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.9
     
+    # Шаг 3: Устанавливаем зависимости для flake8 и isort
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort isort
+        pip install flake8==6.0.0 pep8-naming flake8-broken-line flake8-return flake8-isort isort==5.12.0
         pip install -r backend/requirements.txt
-    
+
+    # Шаг 4: Запускаем isort для проверки импортов
     - name: Run isort
       run: |
-        isort .
-    
+        python -m isort . || exit 0  # Если вы хотите, чтобы isort работал в "только проверка" режиме, добавьте --check
+
+    # Шаг 5: Запускаем flake8 для проверки PEP8 и стиля кода
     - name: Test with flake8
       run: |
-        flake8 .
+        python -m flake8 .
 
 
   build_and_push_backend_to_docker_hub:
