--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,34 +8,50 @@ on:
 
 jobs:
   tests:
-    name: check pep8
     runs-on: ubuntu-latest
+    # Блок services аналогичен docker-compose.yml
+    services:
+      postgres:
+        image: postgres:13.10
+        # Указываем имя тестовой базы, имя и пароль пользователя в открытом виде,
+        # ведь эта база будет работать только во время прогона тестов
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_password
+          POSTGRES_DB: django_db
+        ports:
+          - 5432:5432
+        # Эта конструкция описывает проверку готовности сервиса postgres
+        # Если её не будет, то тесты могут запуститься раньше, чем сервер PostgreSQL
+        # В результате тесты опять решат, что базы нет, — и упадут
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-      # Шаг 1: Клонируем репозиторий
-      - uses: actions/checkout@v4
-      
-      # Шаг 2: Устанавливаем Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-      
-      # Шаг 3: Устанавливаем зависимости для flake8 и isort
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8==6.0.0 pep8-naming flake8-broken-line flake8-return flake8-isort isort==5.12.0
-          pip install -r backend/requirements.txt
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
 
-      # Шаг 4: Запускаем isort для проверки импортов
-      - name: Run isort
-        run: |
-          python -m isort . || exit 0  # Если нужно, добавьте флаг --check для проверки без изменений
-
-      # Шаг 5: Запускаем flake8 для проверки PEP8 и стиля кода
-      - name: Test with flake8
-        run: |
-          python -m flake8 .
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip 
+        pip install flake8==6.0.0 flake8-isort==6.0.0
+        pip install -r ./backend/requirements.txt 
+    # Этот шаг дополним переменными для доступа к БД
+    - name: Test with flake8 and django tests
+      # Добавляем env-переменные для доступа к БД
+      env:
+        POSTGRES_USER: django_user
+        POSTGRES_PASSWORD: django_password
+        POSTGRES_DB: django_db
+        # Сервер БД запущен в Docker, но его порт проброшен на хост
+        # Поэтому подключаемся к 127.0.0.1:5432
+        DB_HOST: 127.0.0.1
+        DB_PORT: 5432
+      run: |
+        python -m flake8 backend/
+        cd backend/
+        python manage.py test
 
 
 
