--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,43 +98,47 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
 
   deploy:
-    name: Deploying on remote server
     runs-on: ubuntu-latest
-    needs:
-      - build_and_push_backend_to_docker_hub
-      - build_and_push_frontend_to_docker_hub
+    needs: 
+      - build_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
     steps:
-      - name: Executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            cd /home/${{ secrets.USER }}/foodgram
-            sudo rm -f .env
-            sudo touch .env
-            sudo chmod 600 .env
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }} | sudo tee -a .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} | sudo tee -a .env
-            echo DB_NAME=${{ secrets.DB_NAME }} | sudo tee -a .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} | sudo tee -a .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} | sudo tee -a .env
-            echo DB_HOST=${{ secrets.DB_HOST }} | sudo tee -a .env
-            echo DB_PORT=${{ secrets.DB_PORT }} | sudo tee -a .env
-
-            docker-compose -f docker-compose.production.yml down
-            docker-compose -f docker-compose.production.yml up -d --build
+    - name: Checkout repo
+      uses: actions/checkout@v3
+    - name: Copy docker-compose.yml via ssh
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        source: "docker-compose.production.yml"
+        target: "foodgram"
+    - name: Executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        script: |
+          cd foodgram
+          sudo docker compose -f docker-compose.production.yml pull
+          sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml up -d
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_tags
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_ingredients
 
   send_message:
-    name: Sending Telegram message
     runs-on: ubuntu-latest
-    needs: [ deploy ]
+    needs: deploy
     steps:
-      - name: Send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Все круто деплой прошел!"
+    - name: Send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: "Деплой успешно выполнен!"
