--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,6 +113,16 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd /home/${{ secrets.USER }}/foodgram
+            sudo rm -f .env        
+            sudo touch .env
+            sudo chmod 666 .env
+            sudo echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+            sudo echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            sudo echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            sudo echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            sudo echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            sudo echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            sudo echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker compose -f docker-compose.production.yml pull
             sudo docker compose -f docker-compose.production.yml down
             sudo docker compose -f docker-compose.production.yml up -d
