--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,23 +113,26 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd /home/${{ secrets.USER }}/foodgram
-            sudo rm -f .env        
+            sudo rm -f .env
             sudo touch .env
             sudo chmod 666 .env
-            sudo echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            sudo echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            sudo echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            sudo echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            sudo echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            sudo echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            sudo echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+
+            sudo sh -c 'echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env'
+            sudo sh -c 'echo DB_ENGINE='${{ secrets.DB_ENGINE }}' >> .env'
+            sudo sh -c 'echo DB_NAME='${{ secrets.DB_NAME }}' >> .env'
+            sudo sh -c 'echo POSTGRES_USER='${{ secrets.POSTGRES_USER }}' >> .env'
+            sudo sh -c 'echo POSTGRES_PASSWORD='${{ secrets.POSTGRES_PASSWORD }}' >> .env'
+            sudo sh -c 'echo DB_HOST='${{ secrets.DB_HOST }}' >> .env'
+            sudo sh -c 'echo DB_PORT='${{ secrets.DB_PORT }}' >> .env'
+
             sudo docker compose -f docker-compose.production.yml pull
             sudo docker compose -f docker-compose.production.yml down
             sudo docker compose -f docker-compose.production.yml up -d
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_tags
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_ingredients
+
 
   send_message:
     name: Sending Telegram message
